OO-9104: add and update in one calendar call