@@ -1013,18 +1013,23 @@ public class ICalFileCalendarManager implements CalendarManager, InitializingBea
 
 	@Override
 	public boolean addEventTo(final Kalendar cal, final KalendarEvent kalendarEvent) {
-		return addEventTo(cal, Collections.singletonList(kalendarEvent));
+		return updateCalendar(cal, List.of(kalendarEvent), List.of());
   }
 	
 	@Override
-	public boolean addEventTo(final Kalendar cal, final List<KalendarEvent> kalendarEvents) {
+	public boolean updateCalendar(final Kalendar cal, final List<KalendarEvent> newEvents, final List<KalendarEvent> modifiedEvents) {
 		OLATResourceable calOres = getOresHelperFor(cal);
 		Boolean persistSuccessful = CoordinatorManager.getInstance().getCoordinator().getSyncer().doInSync( calOres, () -> {
 			Kalendar loadedCal = getCalendarFromCache(cal.getType(),cal.getCalendarID());
-			for(KalendarEvent kalendarEvent:kalendarEvents) {
-				loadedCal.addEvent(kalendarEvent);
-				kalendarEvent.resetImmutableDates();
+			for(KalendarEvent newEvent:newEvents) {
+				loadedCal.addEvent(newEvent);
+				newEvent.resetImmutableDates();
 			}
+			for(KalendarEvent modifiedEvent:modifiedEvents) {
+				loadedCal.removeEvent(modifiedEvent);
+				loadedCal.addEvent(modifiedEvent);
+			}
+			
 			boolean successfullyPersist = persistCalendar(loadedCal);
 			return Boolean.valueOf(successfullyPersist);
 		});
@@ -1151,26 +1156,6 @@ public class ICalFileCalendarManager implements CalendarManager, InitializingBea
 		return updatedSuccessful.booleanValue();
     }
 
-	@Override
-	public boolean updateEventsFrom(Kalendar cal, List<KalendarEvent> kalendarEvents) {
-		final OLATResourceable calOres = getOresHelperFor(cal);
-		Boolean updatedSuccessful = CoordinatorManager.getInstance().getCoordinator().getSyncer().doInSync( calOres, () -> {
-			Kalendar loadedCal = getCalendarFromCache(cal.getType(), cal.getCalendarID());
-			for(KalendarEvent kalendarEvent:kalendarEvents) {
-				loadedCal.removeEvent(kalendarEvent); // remove old event
-				loadedCal.addEvent(kalendarEvent); // add changed event
-			}
-			boolean successfullyPersist = persistCalendar(loadedCal);
-			// inform all controller about calendar change for reload
-			CoordinatorManager.getInstance().getCoordinator().getEventBus().fireEventToListenersOf(new CalendarGUIModifiedEvent(cal), OresHelper.lookupType(CalendarManager.class));
-			return successfullyPersist;
-		});
-		return updatedSuccessful.booleanValue();
-	}
-
-	/**
-	 * @see org.olat.commons.calendar.CalendarManager#updateEventFrom(org.olat.commons.calendar.model.Kalendar, org.olat.commons.calendar.model.KalendarEvent)
-	 */
 	@Override
 	public boolean updateEventAlreadyInSync(final Kalendar cal, final KalendarEvent kalendarEvent) {
 		OLATResourceable calOres = getOresHelperFor(cal);
